--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="item-text1">
                             <h3>Cachoeira</h3>
                         <p>
-                           O Resort tem acesso a uma das cachoeiras mais belas do Brasil. 
+                            Green Park é um dos mais revigorantes passeios no Brasil, composto por trilhas e cachoeiras, incluindo a Cachoeira Rei da Prata. Trilha leve com todo suporte e serviços do Green Resort.  
                         </p>
                         </div>
                         </div>
@@ -117,7 +117,7 @@
                         <div class="item-text4">
                             <h3>Playground</h3>
                         <p>
-                           Green Resort ama crianças. Temos área de 2 mil km quadrados de lazer para crianças! 
+                           Green Resort ama crianças. Temos área de 2 mil km quadrados de espaços projetados para proporcionar diversão e entretenimento para nossas crianças. Todas as estruturas e equipamentos são adequados de forma segura e estimulante! 
                         </p>
                         </div>
                         </div>
@@ -133,7 +133,7 @@
                               alt="atividades" />
                            </div>
                         <div class="item-text5">
-                            <h3>Quadras de esportes</h3>
+                            <h3>Quadras de esporte</h3>
                         <p>
                            Esporte não pode faltar no nosso Green Resort! Temos quadra de futebol, quadra de vôlei e quadra de tênis. Todos de alto padrão com belas vistas!
                         </p>
@@ -153,8 +153,7 @@
                         <div class="item-text6">
                             <h3>Quartos</h3>
                         <p>
-                           Green Resort tem quartos com as melhores vistas, piscinas privativas e hidromassagem. Todos perfeitos para melhor estadia!
-
+                           Green Resort tem quartos com as melhores vistas, piscinas privativas e hidromassagem. Todos perfeitos para sua melhor estadia!
                         </p>
                         </div>
                         </div>
@@ -172,8 +171,7 @@
                         <div class="item-text8">
                             <h3>Saunas</h3>
                         <p>
-                           Green Resort possui 150 saunas privativas com infraestrutura moderna e segura!
-
+                           As cabines de saunas da Green Resort são inovadoras. Possuem design cuidadosamente pesando para proporcionar a melhor experiência do banho de sauna. São 50 saunas privativas espalhadas em torno do nosso resort!
                         </p>
                         </div>
                         </div>
@@ -181,29 +179,191 @@
                 </div>
             </section>
         </section>
-        <section id="testimonial">
-            <h2>Feedback dos nossos clientes</h3>
-            <p>Fique inspirado e vem nos visitar!</p>
-            <div>
-                <h3>Melhor lugar para relaxar!</h3>
-                <q>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, quidem explicabo quasi sequi illo officiis quis corrupti ullam, temporibus rem labore consectetur, non maiores doloribus dicta est? Eum, nulla corporis!</q>
-
+        <section id="testimonial" class="clients">
+            <div class="container">
+                    <div class="containerCards">
+                        <div class="left">
+                            <div class="text">
+                                <h2>Feedback dos nossos clientes</h3>
+                                <p>Fique inspirado e vem nos visitar!</p>
+                            </div>
+                            <div class="card vertical">
+                                <h3>Lugar perfeito para lua-de-mel!</h3>
+                                <div class="cardContent">
+                                    <q>Reservei uma semana nesse resort para lua-de-mel e amamos todo detalhe. Aproveitamos muito e o resort tem de tudo! Na próxima levarei meus filhos também! Recomendadíssimo! </q>
+                                <div class="person">
+                                    <img class="image" alt="Cliente" src="./assets/43.jpg" />
+                                    
+                                <div class="text-content">
+                                    <h4>Gabriela</h4>
+                                    <span>Advogada</span>
+                                </div>
+                                </div>   
+                                </div>
+                                </div>
+                            </div>
+                               <div class="right">
+                                <div class="card horizontal">
+                                    <h3>Melhor experiência</h3>
+                                    <div class="cardContent">
+                                    <q>Não conheço nenhum outro resort melhor que esse. Green Resort é meu point favorito para descansar todo ano! Recomendo muito!</q>
+                                <div class="person">
+                                    <img class="image" alt="Cliente" src="./assets/42.jpg" />
+                                <div class="text-content">
+                                    <h4>William</h4>
+                                    <span>Backend Developer</span>
+                                </div>
+                                </div>
+                                </div>
+                                </div>
+                                <div class="card retangular">
+                                    <h3>Lugar magnífico!</h3>
+                                    <div class="cardContent">
+                                    <q>O resort é ótimo! Quartos espaçosos com cama grande, piscinas, frigobar, TV, wi-fi, banheira com hidromassagem, tem academia, quadras de esporte, até cachoeira tem. O café da manhã é ótimo com bastante variedade e tudo muito saboroso. O estacionamento é cortesia aos hóspedes do hotel. A localização fica dentro de uma floresta, local totalmente isolado, um perfeito retiro!</q>
+                                
+                                <div class="person">
+                                    <img class="image" alt="Cliente" src="./assets/40.jpg" />
+                                <div class="text-content">
+                                    <h4>Tommy</h4>
+                                    <span>Empresário</span>
+                                </div>
+                                </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </section>
-        <section id="conheca">
-            <h2>Conheça o nosso Green Club</h2>
-            <p>Veja a nossa localização, horários e dias de funcionamento</p>
-            <div>
-                <h3>Aberto de terça a domingo</h3>
+        <section id="conheca" class="atendimento">
+            <div class="container">
+                <div class="text-content">
+                    <h2>Conheça o nosso Green Resort!</h2>
+                    <p>Veja a nossa localização, horários e dias de funcionamento</p>
+                </div>        
+                <div class="cards">
+                    <div class="card">
+                        <h3>Aberto de terça a domingo</h3>
+                    <div class="cardContent">
+                        <img class="time" alt="atendimento" src="./assets/calendario.png" />
+                    </div>
+                    </div>
+                    <div class="card">
+                        <h3>Check-in e reservas de 7h às 22h </h3>
+                        <div class="cardContent">
+                        <img class="time" alt="atendimento" src="./assets/relogio-de-parede.png" /> 
+                    </div>
+                    </div>
+                    <div class="card">
+                        <h3>Codajás, Amazônia, AM, 69450-000, Brasil</h3>
+                        <div class="cardContent">
+                            <img class="time" alt="atendimento" src="./assets/localizacao.png" />
+                        </div>
+                    </div>
+                </div>
             </div>
-            </section>
-            <section id="fotos">
-                <h2>  Fotos do clube</h2>
-            </section>
-            <section id="contato">
-                <h2>Fale conosco</h2>
-            </section>
-
+        </section>
+            <section id="fotos" class="photos">
+                <div class="container">
+                    <div class="images">
+                        <h2>Fotos do Green Resort</h2>
+                        <p>Veja todos os detalhes que temos em nosso Green Resort!</p>
+                    <div class="galeria">
+                        <div class="photo">
+                            <img src="./assets/30.jpg" class="imagem-padrao" alt="Imagem 1" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/24.jpg" class="imagem-padrao" alt="Imagem 2" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/28.webp" class="imagem-padrao" alt="Imagem 3" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/27.jpg" class="imagem-padrao" alt="Imagem 4" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/22.jpg" class="imagem-padrao" alt="Imagem 5" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/2.jpg" class="imagem-padrao" alt="Imagem 6" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/3.jpg" class="imagem-padrao" alt="Imagem 7" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/10.webp" class="imagem-padrao" alt="Imagem 8" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/11.png" class="imagem-padrao" alt="Imagem 9" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/12.jpg" class="imagem-padrao" alt="Imagem 10" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/14.jpeg" class="imagem-padrao" alt="Imagem 11" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/13.webp" class="imagem-padrao" alt="Imagem 12" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/15.jpg" class="imagem-padrao" alt="Imagem 13" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/7.jpg" class="imagem-padrao" alt="Imagem 14" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/8.jpg" class="imagem-padrao" alt="Imagem 15" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/9.jpg" class="imagem-padrao" alt="Imagem 16" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/futebol.jfif" class="imagem-padrao" alt="Imagem 17" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/futebol.jpg" class="imagem-padrao" alt="Imagem 18" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/vôlei.jfif" class="imagem-padrao" alt="Imagem 19" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/tênis.jpg" class="imagem-padrao" alt="Imagem 20" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/20.jpg" class="imagem-padrao" alt="Imagem 21" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/21.jpg" class="imagem-padrao" alt="Imagem 22" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/19.jpg" class="imagem-padrao" alt="Imagem 22" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/4.jpg" class="imagem-padrao" alt="Imagem 23" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/5.jpg" class="imagem-padrao" alt="Imagem 24" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/6.jpg" class="imagem-padrao" alt="Imagem 25" />
+                        </div>
+                        <div class="photo">
+                            <img src="./assets/16.jpg" class="imagem-padrao" alt="Imagem 22" />
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contato" class="contato">
+            <div classs="container">
+                <div class="contats">
+                    <h2>Fale conosco</h2>
+                    <p> </p>
+                </div>
+            </div>    
+        </section>
         </section>
     </main>
 </body>
