atualição do projeto

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/base.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
             <div class="text-content">
             <h1>BEM VINDO AO GREEN RESORT</h1>
             <h3>O resort mais isolado do mundo e perfeito para recarregar suas energias!</h3>
-            <button>CONHEÇA O RESORT</button>
+            <button><a href="#fotos">CONHEÇA O RESORT</a></button>
             </div>
         </section>
         <section class="atividades" id="atividades">
@@ -378,7 +378,7 @@
                             </div>
                         </div>
                         <div class="buttonForm">
-                            <button>Enviar mensagem</button>
+                            <button><a href="#contato">Enviar mensagem</a></button>
                         </div>
                     </div>
                 </form>
@@ -400,7 +400,7 @@
                         <li><a href="#conheca">Informações</a></li>
                         <li><a href="#fotos">Sobre o Resort</a></li>
                         <li><a href="#contato">Contato</a></li>
-                        <li>Entrar</li>
+                        <li></a>Entrar</li>
                     </ul>
                 </div>
                 <div class="contatoFooter">
